App_Script.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Assignment2 Script for Deploying Cafe dynamic application's app Layer

Parameters:
  NetworkStackName:
    Description: Name of network stack
    Type: String
    MinLength: 1
    MaxLength: 255
    AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
    Default: assign2-network-stack

  AmazonLinuxAMIID:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

  KeyName:
    Description: Name of an existing EC2 KeyPair
    Type: String
    Default: lopes-key
  
  LaunchTemplateId:
    Type: String
    Description: 'Enter the Launch Template ID'
    Default: 'lt-0771cbbf2a33a7ecb'

  Region:
    Description: AWS Region where resources will be created
    Type: String
    Default: us-east-1

  AccountId:
    Description: AWS Account ID
    Type: String
    Default: '211125382553' 
      
Resources:

  LopesAssign2BastionHost:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: !Ref AmazonLinuxAMIID
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          DeleteOnTermination: true
          GroupSet:
            - !Ref BastionSecurityGroup
          SubnetId: !ImportValue
            Fn::Sub: "${NetworkStackName}-LopesAssign2PublicSubnet1"
      Tags:
        - Key: Name
          Value: LopesAssign2BastionHost
      UserData:
        Fn::Base64: |
          #!/bin/bash -xe
          sudo yum install -y httpd php php-pgsql git postgresql postgresql-server postgresql-contrib
          sudo git clone https://github.com/Cloud-Computing-2023/INFT-1210-Cloud-Infrastructure.git /var/www/html
          sudo postgresql-setup initdb
          sudo systemctl start postgresql
          sudo systemctl enable postgresql
          sudo -u postgres psql -c "CREATE DATABASE lopesdatabase;"
          sudo -u postgres psql -d lopesdatabase -c "CREATE TABLE employee (id SERIAL PRIMARY KEY, fname VARCHAR NOT NULL, lname VARCHAR NOT NULL,position VARCHAR ,created_at TIMESTAMPTZ DEFAULT Now());"
          sudo -u postgres psql -d lopesdatabase -c "INSERT INTO employee (fname,lname) VALUES ('Gwyneth','Lopes'),('Garreth','Lopes'),('Ezra','Lopes'),('Aziel','Lopes'),('Dwayne','Lopes');"
          sudo systemctl enable httpd
          sudo systemctl start httpd

  
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP ingress and SSH
      VpcId: !ImportValue
        Fn::Sub: "${NetworkStackName}-LopesAssignment2Vpc"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: LoadBalancerSecurityGroup

  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP ingress and SSH
      VpcId: !ImportValue
        Fn::Sub: "${NetworkStackName}-LopesAssignment2Vpc"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: BastionHostSecurityGroup

Outputs:
  URL:
    Description: URL of the Cafe website
    Value: !Sub 'http://${LopesAssign2BastionHost.PublicIp}'
  BastionHostIP:
    Value: !GetAtt LopesAssign2BastionHost.PublicIp
    Description: BastionHostIP
    Export:
      Name:
        'Fn::Sub': '${AWS::StackName}-BastionHostIP'
  BastionHostSecurityGroup:
    Value: !Ref BastionSecurityGroup
    Description: BastionHostSecurityGroup ID
    Export:
      Name:
        'Fn::Sub': '${AWS::StackName}-BastionHostSecurityGroup'
  LoadBalancerSecurityGroup:
    Value: !Ref LoadBalancerSecurityGroup
    Description: LoadBalancerSecurityGroup ID
    Export:
      Name:
        'Fn::Sub': '${AWS::StackName}-LoadBalancerSecurityGroup'
